--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
@@ -31,6 +32,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^9.31.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.11"
   },
