--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwind-merge": "^2.5.4",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
