--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "core-js": "^3.8.3",
+    "flowbite": "^3.1.2",
     "tailwind-merge": "^2.5.4",
+    "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
     "vue-toastification": "^2.0.0-rc.5",
